--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <img class="mobile-silver" src="./images/mockup.png">
         </div>
       </div>
-      <div class="  d-flex  flex-column col-5 row-gap-32">
+      <div class="d-flex  flex-column col-5 row-gap-32">
         <div classs="d-flex row-gap-4">
           <label>Features</label>
           <h1>uifry premium</h1>
@@ -112,7 +112,7 @@
         <div class=" d-flex flex-column row-gap-12">
           <div class="d-flex flex-column">
             <div>
-              <div class="d-flex">
+              <div class="d-flex vertical-flex">
                 <img src="./images/feature-icon-1.png" alt="image" class="icon-24">
                 <h6>budgeting intervals</h6>
               </div>
@@ -124,7 +124,7 @@
           </div>
           <div class="d-flex flex-column">
             <div>
-              <div class="d-flex">
+              <div class="d-flex  vertical-flex">
                 <img src="./images/feature-icon-2.png" alt="image" class="icon-24">
 
                 <h6>budgeting intervals</h6>
@@ -138,7 +138,7 @@
 
           <div class="d-flex flex-column">
             <div>
-              <div class="d-flex">
+              <div class="d-flex  vertical-flex">
                 <img src="./images/feature-icon-3.png" alt="image" class="icon-24">
 
                 <h6>budgeting intervals</h6>
@@ -155,14 +155,14 @@
     </div>
 
     <!--page:3-->
-    <div class=" col-10 column-gap h-100 d-flex justify-content-around">
+    <div class=" col-10 column-gap  d-flex justify-content-around">
       <div class="d-flex flex-column col-5 row-gap-32">
-        <div class="row-gap-4">
+        <div class="d-flex flex-column  row-gap-4">
           <label>Advantages</label>
           <h1>why choose Uifry?</h1>
         </div>
         <div class=" d-flex flex-column  row-gap-23">
-          <div class="d-flex align-items-center ">
+          <div class="d-flex align-items-center  vertical-flex">
             <img src="./images/advantage-icon-1.png" alt="image" class="icon-48">
 
             <h6>clever notifications</h6>
@@ -214,7 +214,7 @@
       </div>
       <div class="d-flex flex-column col-5">
         <div class="d-flex flex-column row-gap-23">
-          <div class="d-flex align-items-center">
+          <div class="d-flex align-items-center vertical-flex">
             <img src="./images/advantage-icon-2.png" alt="image" class="icon-48">
             <h6>Fully Customizable</h6>
           </div>
@@ -240,9 +240,9 @@
             “Arcu at dictum sapien, mollis. Vulputate sit id accumsan, ultricies. In ultrices malesuada elit mauris
             etiam odio. Duis tristique lacus, et blandit viverra nisl velit. Sed mattis rhoncus, diam suspendisse sit
             nunc, gravida eu. Lectus eget eget ac dolor neque lorem sapien, suspendisse aliquam.” </p>
-          <div class="d-flex">
-            <img src="./images/image-1.png" class="icon-40">
-            <div class="d-flex align-items-center">
+          <div class="d-flex vertical-flex">
+            <img src="./images/image-1.png " class="icon-40">
+            <div class="d-flex align-items-center  vertical-flex">
               <img src="./images/image-2.png" class="icon-30">
               <img src="./images/image-3.png" class="icon-30">
               <img src="./images/image-4.png" class="icon-30">
