--- a/index.html
+++ b/index.html
@@ -66,19 +66,53 @@
   <div id="stars"></div>
   <div id="stars"></div>
   <div id="stars"></div>
+  <div id="stars"></div>
 
   <div class="d-flex flex-column align-items-center" id="page-gap">
 
     <!--page:1-->
-    <div class="d-flex col-10 column-gap justify-content-around">
+    <div class="d-flex col-10 height column-gap justify-content-around">
       <div class="d-flex flex-column  col-6 row-gap-12 pad-64">
         <h1>Make The Best Financial Decisions</h1>
         <p>Cum et convallis risus placerat aliquam, nunc. Scelerisque aliquet faucibus tincidunt eu adipiscing sociis
           arcu lorem porttitor.</p>
+       
         <div class="d-flex gap-5">
           <button class="btn btn-dark">Get Started<img src="./images/vector.svg"></button>
           <button class="btn"> <img src="./images/play.png">Watch Now</button>
         </div>
+        <div class="square">     
+        <div class="d-flex flex-column">
+          <div class="vl vl-1"></div>
+          <div class="vl vl-2"></div>
+            <h6>Uifry Premium</h6>
+            <p>Free Trail</p>
+        </div></div>
+        <div class="square-1">
+          <div class="d-flex">
+             <p> make the best financial decisions</p>
+          </div>
+        </div>
+        <div class="square-2 justify-content-between d-flex">
+          <div class="d-flex ">
+              <img src="./images/cup.png" class="icon-24">
+              <div class="d-flex flex-column">
+              <h6>Achievements</h6>
+              <p>BestFinanceAppOnPlaystore</p>
+            </div>
+            </div>
+            <div class="vl vl-3"></div>
+            <div class="d-flex ">
+              <img src="./images/card.png">
+            <div class="d-flex flex-column">
+              <h6>Finance</h6>
+              <p>MOstPopularAccountingApp</p>
+            </div>
+            </div>
+        </div>
+        <p class="A">a</p>
+        <div class="ellipse" id="ellipse-1"></div>
+        <div class="ellipse" id="ellipse-2"></div>
       </div>
       <div class="d-flex mt-2 col-5">
         <div id="mobile-1">
@@ -93,18 +127,32 @@
           <img class="mobile-mockup" id="mobile-angle" src="./images/silver.png">
           <img class="mobile-silver" id="mobile-angle" src="./images/mockup.png">
         </div>
+        <div class="ellipse" id="ellipse-3"></div>
+        <div class="ellipse" id="ellipse-4"></div>
       </div>
+      <div class="circle" id="circle-1"></div>
+      <div class="circle" id="circle-2"></div>
+      <div class="circle" id="circle-3"></div>
     </div>
 
+ 
     <!--page:2-->
-    <div class="col-10 justify-content-around d-flex">
-      <div class="col-5">
+    <div class="col-10  height-1 column-gap justify-content-center  align-items-center  d-flex">
+      <div class="d-flex col-5 justify-content-center">
         <div id="mobile-4">
           <img class="mobile-mockup" src="./images/silver.png">
           <img class="mobile-silver" src="./images/mockup.png">
+
+         
         </div>
+        <div class="circle" id="circle-4"></div>
+        <div class="circle" id="circle-5"></div>
+        <div class="circle" id="circle-6"></div>
+        <div class="ellipse" id="ellipse-5"></div>
+        <div class="ellipse" id="ellipse-6"></div>
+
       </div>
-      <div class="d-flex  flex-column col-5 row-gap-32">
+      <div class="d-flex  flex-column col-6 row-gap-32 ">
         <div classs="d-flex row-gap-4">
           <label>Features</label>
           <h1>uifry premium</h1>
@@ -152,10 +200,12 @@
 
         </div>
       </div>
+      <div class="ellipse" id="ellipse-7"></div>
+      <div class="ellipse" id="ellipse-8"></div>
     </div>
 
     <!--page:3-->
-    <div class=" col-10 column-gap  d-flex justify-content-around">
+    <div class=" col-10 height-1 d-flex align-items-center justify-content-around">
       <div class="d-flex flex-column col-5 row-gap-32">
         <div class="d-flex flex-column  row-gap-4">
           <label>Advantages</label>
@@ -173,46 +223,60 @@
             gravida eu. Lectus eget eget ac dolor neque lorem sapien, suspendisse aliquam. </p>
         </div>
       </div>
-      <div class="col-6">
-        <div id="mobile-5">
+      <div class="col-5 d-flex  justify-content-center">
+        <div id="mobile-5 ">
           <img class="mobile-mockup" src="./images/silver.png">
           <img class="mobile-silver" src="./images/mockup-1.png">
-        </div>
-        <div class="card">
-          <img src="./images/photo.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">$560.00</h5>
-            <p class="card-text">From Adom</p>
+          <div class="circle" id="circle-7"></div>
+          <div class="circle" id="circle-8"></div>
+          <div class="circle" id="circle-9"></div>
+          <div class="card">
+            <img src="./images/photo.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">$560.00</h5>
+              <p class="card-text">From Adom</p>
+            </div>
+            <a href="#">On Hold</a>
+  
           </div>
-          <a href="#">On Hold</a>
+  
         </div>
-      </div>
 
+
+      </div>
     </div>
 
+
     <!--page:4-->
-    <div class="col-10 d-flex justify-content-around">
-      <div class=" d-flex col-5">
+    <div class="col-10 height-1 d-flex justify-content-around align-items-center">
+      <div class=" d-flex col-5 justify-content-center">
         <div id="mobile-6">
           <img class="mobile-mockup" src="./images/silver.png">
           <img class="mobile-silver" src="./images/mockup.png">
-        </div>
 
-        <div class="card1">
-          <div class="d-flex column-gap-125">
-            <img src="./images/credit-card-logo.png" alt="Card image cap">
-            <img src="./images/credit-card-image.png">
-          </div>
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">0000 8888 2222 3333</h5>
-            <div class="d-flex flex-row ">
-              <p>VALID THRU</p>
-              <p class="card-text"> 07/24</p>
+          <div class="card1">
+            <div class="d-flex column-gap-125">
+              <img src="./images/credit-card-logo.png" alt="Card image cap">
+              <img src="./images/credit-card-image.png">
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">0000 8888 2222 3333</h5>
+              <div class="d-flex flex-row ">
+                <p>VALID THRU</p>
+                <p class="card-text"> 07/24</p>
+              </div>
             </div>
           </div>
+
         </div>
+        <div class="circle" id="circle-10"></div>
+        <div class="circle" id="circle-11"></div>
+        <div class="circle" id="circle-12"></div>
+        <div class="ellipse-9"></div>
+        <div class="ellipse-10"></div>
+
       </div>
-      <div class="d-flex flex-column col-5">
+      <div class="d-flex flex-column col-6">
         <div class="d-flex flex-column row-gap-23">
           <div class="d-flex align-items-center vertical-flex">
             <img src="./images/advantage-icon-2.png" alt="image" class="icon-48">
@@ -227,14 +291,19 @@
     </div>
 
     <!--page:5-->
-    <div class="align-items-center d-flex flex-column row-gap-4">
-      <label style="color:black">Testimonial</label>
-      <h1 style="width:450px; text-align: center;">What Our Users Say About Us?</h1>
-      <div class="d-flex col-10 align-items-center ">
-        <div class="d-flex col-6">
+    <div class="d-flex flex-column row-gap-4 align-items-center">
+      <div class="align-items-center d-flex flex-column">
+        <label style="color:black">Testimonial</label>
+        <h1 style="width:450px; text-align: center;">What Our Users Say About Us?</h1>
+      </div>
+      <div class="height-1 d-flex col-10 justify-content-around align-items-center ">
+        <div class="d-flex col-5 justify-content-center">
           <img src="./images/vector1.svg">
+          <div class="circle" id="circle-13"></div>
+          <div class="circle" id="circle-14"></div>
+          <div class="circle" id="circle-15"></div>
         </div>
-        <div class="d-flex col-4 flex-column row-gap-24 column-gap">
+        <div class="d-flex col-5 flex-column row-gap-24 column-gap">
           <h6 style="font-size: 28px;">the best financial accounting app ever!</h6>
           <p>
             “Arcu at dictum sapien, mollis. Vulputate sit id accumsan, ultricies. In ultrices malesuada elit mauris
@@ -254,44 +323,158 @@
       </div>
     </div>
 
-    <!--circles-->
-    <div class="circle" id="circle-1"></div>
-    <div class="circle" id="circle-2"></div>
-    <div class="circle" id="circle-3"></div>
-    <div class="circle" id="circle-4"></div>
-    <div class="circle" id="circle-5"></div>
-    <div class="circle" id="circle-6"></div>
-    <div class="circle" id="circle-7"></div>
-    <div class="circle" id="circle-8"></div>
-    <div class="circle" id="circle-9"></div>
-    <div class="circle" id="circle-10"></div>
-    <div class="circle" id="circle-11"></div>
-    <div class="circle" id="circle-12"></div>
-    <div class="circle" id="circle-13"></div>
-    <div class="circle" id="circle-14"></div>
-    <div class="circle" id="circle-15"></div>
+    <!--pages-6-->
+    <div class="col-10 height-1 d-flex flex-column justify-content-center row-gap-23">
+      <div class="d-flex flex-column row-gap-4">
+        <label>FAQ</label>
+        <h1>Frequently Asked Questions</h1>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="col-5">
+          <div style="background-color: #ff5555;" class="card2 card">
+            <div class="card-body">
+              <h5 class="card-title">the best financial accounting app ever!</h5>
+              <p class="card-text">“Arcu at dictum sapien, mollis. Vulputate sit id accumsan, ultricies. In ultrices
+                malesuada elit mauris.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-5">
+          <div style="color:black;" class="card2 card">
+            <div class="card-body">
+              <h5 style="color:black !important;" class="card-title">the best financial accounting app ever!</h5>
+              <p style="color:black !important;" class="card-text">“Arcu at dictum sapien, mollis. Vulputate sit id
+                accumsan, ultricies. In ultrices malesuada elit mauris.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="col-5">
+          <div style="color:black;" class="card2 card">
+            <div class="card-body">
+              <h5 style="color:black !important;" class="card-title">the best financial accounting app ever!</h5>
+              <p style="color:black !important;" class="card-text">“Arcu at dictum sapien, mollis. Vulputate sit id
+                accumsan, ultricies. In ultrices malesuada elit mauris.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-5">
+          <div style="background-color: #ff5555;" class="card2 card">
+            <div class="card-body">
+              <h5 class="card-title">the best financial accounting app ever!t</h5>
+              <p class="card-text">“Arcu at dictum sapien, mollis. Vulputate sit id accumsan, ultricies. In ultrices
+                malesuada elit mauris.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="col-5">
+          <div style="background-color: #ff5555; " class="card2 card">
+            <div class="card-body">
+              <h5 class="card-title">the best financial accounting app ever!</h5>
+              <p class="card-text">“Arcu at dictum sapien, mollis. Vulputate sit id accumsan, ultricies. In ultrices
+                malesuada elit mauris.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-5">
+          <div class="card2 card">
+            <div class="card-body">
+              <h5 style="color:black !important;" class="card-title">the best financial accounting app ever!</h5>
+              <p style="color:black !important;" class="card-text">“Arcu at dictum sapien, mollis. Vulputate sit id
+                accumsan, ultricies. In ultrices malesuada elit mauris.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <!--ellipse-->
-    <div class="ellipse" id="ellipse-1"></div>
-    <div class="ellipse" id="ellipse-2"></div>
-    <div class="ellipse" id="ellipse-3"></div>
-    <div class="ellipse" id="ellipse-4"></div>
-    <div class="ellipse" id="ellipse-5"></div>
-    <div class="ellipse" id="ellipse-6"></div>
-    <div class="ellipse" id="ellipse-7"></div>
-    <div class="ellipse" id="ellipse-8"></div>
-    <div class="ellipse" id="ellipse-9"></div>
-    <div class="ellipse" id="ellipse-10"></div>
-    <div class="ellipse" id="ellipse-11"></div>
-    <div class="ellipse" id="ellipse-12"></div>
-    <div class="ellipse" id="ellipse-13"></div>
-    <div class="ellipse" id="ellipse-14"></div>
+    <!--page-7-->
+    <div id="frame" class="d-flex height-1 col-10 justify-content-around align-items-center">
+      <div class="d-flex flex-column  col-5 row-gap-12 pad-64">
+        <h1>Ready To Get Started?</h1>
+        <p>Risus habitant leo egestas mauris diam eget morbi tempus vulputate.</p>
+        <div class="d-flex gap-5">
+          <button class="btn btn-light">Download App<img src="./images/vector.svg"></button>
+        </div>
+        <div class="circle" id="circle-16"></div>
+        <div class="circle" id="circle-17"></div>
+        <div class="circle" id="circle-18"></div>
+      </div>
 
+      <div class="d-flex height-1 col-6 justify-content-around align-items-center">
+        <ul>
 
+        </ul>
+        <img src="./images/vector2.svg">
+        <div class="circle" id="circle-19"></div>
+        <div class="circle" id="circle-20"></div>
+        <div class="circle" id="circle-21"></div>
+      </div>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"></script>
+     <!--footer-->
+    <div class="d-flex justify-content-betweeen column-gap">
+      <ul>
+        <li>
+          <a class="navbar-brand" href="#"><img src="./images/logo.png" class="icon-24"><strong>uifry</strong></a>
+        </li>
+        <li>
+          <div class="d-flex  vertical-flex">
+            <img src="./images/email.png" alt="image" class="icon-24">
+
+            <h6 class="heading2">Help@Frybix.Com</h6>
+          </div>
+        </li>
+        <li>
+          <div class="d-flex  vertical-flex">
+            <img src="./images/phone.png" alt="image" class="icon-24">
+
+            <h6 class="heading2">+123 456 678 89</h6>
+          </div>
+        </li>
+
+      </ul>
+      <ul>
+        <li class="heading">Links</li>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Bookings</li>
+        <li>Blog</li>
+      </ul>
+      <ul>
+        <li class="heading">Legal</li>
+        <li>Terms of Use</li>
+        <li>Privacy Policy</li>
+        <li>Cookie Policy</li>
+      </ul>
+      <ul>
+        <li class="heading">Product</li>
+        <li>Take Tour</li>
+        <li>Live Chat</li>
+        <li>Reviews</li>
+      </ul>
+      <ul>
+        <li class="heading">Newsletter</li>
+        <li>Stay Up to Date</li>
+        <li>
+          <form>
+            <label>Your email</label>
+            <button>Subscribe</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  <footer>
+    <hr style="margin: 8px;">
+    <h6 style="text-align: center; margin: 24px;">Copyright 2022 uifry.com all rights reserved</h6>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
