--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <div id="stars"></div>
   <div id="stars"></div>
   <div id="stars"></div>
+  <div id="stars"></div>
 
   <div class="d-flex flex-column align-items-center" id="page-gap">
 
@@ -227,9 +228,6 @@
         <div id="mobile-5 ">
           <img class="mobile-mockup" src="./images/silver.png">
           <img class="mobile-silver" src="./images/mockup-1.png">
-          <div class="circle" id="circle-7"></div>
-          <div class="circle" id="circle-8"></div>
-          <div class="circle" id="circle-9"></div>
           <div class="card">
             <img src="./images/photo.png" alt="Card image cap">
             <div class="card-body">
@@ -239,10 +237,13 @@
             <a href="#">On Hold</a>
   
           </div>
-  
+          <div class="circle" id="circle-7"></div>
+          <div class="circle" id="circle-8"></div>
+          <div class="circle" id="circle-9"></div>
+          <div class="ellipse" id="ellipse-9"></div>
+          <div class="ellipse" id="ellipse-10"></div>
         </div>
-
-
+       
       </div>
     </div>
 
@@ -272,8 +273,8 @@
         <div class="circle" id="circle-10"></div>
         <div class="circle" id="circle-11"></div>
         <div class="circle" id="circle-12"></div>
-        <div class="ellipse-9"></div>
-        <div class="ellipse-10"></div>
+        <div class="ellipse" id="ellipse-11"></div>
+        <div  class="ellipse" id="ellipse-12"></div>
 
       </div>
       <div class="d-flex flex-column col-6">
@@ -302,6 +303,8 @@
           <div class="circle" id="circle-13"></div>
           <div class="circle" id="circle-14"></div>
           <div class="circle" id="circle-15"></div>
+          <div class="ellipse" id="ellipse-13"></div>
+          <div class="ellipse" id="ellipse-14"></div>
         </div>
         <div class="d-flex col-5 flex-column row-gap-24 column-gap">
           <h6 style="font-size: 28px;">the best financial accounting app ever!</h6>
@@ -392,7 +395,7 @@
     </div>
 
     <!--page-7-->
-    <div id="frame" class="d-flex height-1 col-10 justify-content-around align-items-center">
+    <div id="frame" class="d-flex height-1 col-10 justify-content-around align-items-center row-gap-65">
       <div class="d-flex flex-column  col-5 row-gap-12 pad-64">
         <h1>Ready To Get Started?</h1>
         <p>Risus habitant leo egestas mauris diam eget morbi tempus vulputate.</p>
@@ -402,22 +405,23 @@
         <div class="circle" id="circle-16"></div>
         <div class="circle" id="circle-17"></div>
         <div class="circle" id="circle-18"></div>
+        <div class="ellipse" id="ellipse-15"></div>
+        <div class="ellipse" id="ellipse-16"></div>
       </div>
 
-      <div class="d-flex height-1 col-6 justify-content-around align-items-center">
-        <ul>
-
-        </ul>
+      <div id="move-frame" class="d-flex height-1 col-6 justify-content-right ">
         <img src="./images/vector2.svg">
         <div class="circle" id="circle-19"></div>
         <div class="circle" id="circle-20"></div>
         <div class="circle" id="circle-21"></div>
+        <div class="ellipse" id="ellipse-17"></div>
+        <div class="ellipse" id="ellipse-18"></div>
       </div>
     </div>
 
      <!--footer-->
     <div class="d-flex justify-content-betweeen column-gap">
-      <ul>
+      <ul class="row-gap-">
         <li>
           <a class="navbar-brand" href="#"><img src="./images/logo.png" class="icon-24"><strong>uifry</strong></a>
         </li>
@@ -429,7 +433,7 @@
           </div>
         </li>
         <li>
-          <div class="d-flex  vertical-flex">
+          <div class="d-flex   vertical-flex">
             <img src="./images/phone.png" alt="image" class="icon-24">
 
             <h6 class="heading2">+123 456 678 89</h6>
@@ -460,9 +464,9 @@
         <li class="heading">Newsletter</li>
         <li>Stay Up to Date</li>
         <li>
-          <form>
-            <label>Your email</label>
-            <button>Subscribe</button>
+          <form class="d-flex gap-5 mx-4 mt-4 align-items-center">
+            <p>Your email</p>
+            <button class="btn btn-dark">Subscribe</button>
           </form>
         </li>
       </ul>
