--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
     </div>
 
     <!--page:4-->
-    <div class="col-10 d-flex justify-content-around align-items-center">
-      <div class=" d-flex col-5 justify-content-center">
+    <div class="col-10 d-flex justify-content-between align-items-center">
+      <div class=" d-flex col-5 ">
         <div>
           <img class="mobile-mockup" src="./images/silver.png">
           <img class="mobile-silver" src="./images/mockup.png">
 
-          <div class="card1 card flex-column justify-content-between">
-            <div class="d-flex justify-content-between">
+          <div class="card1 card flex-column">
+            <div class="d-flex " id="align-items">
               <img src="./images/credit-card-logo.png" alt="Card image cap">
               <img src="./images/credit-card-image.png">
             </div>
@@ -266,7 +266,7 @@
         <label>FAQ</label>
         <h1>Frequently Asked Questions</h1>
       </div>
-      <div class="d-flex gap-5 justify-content-between ">
+      <div class="d-flex gap-5 justify-content-between  ">
           <div style="background-color: #ff5555;" class="card custom-card ">
             <div class="gap-4 d-flex flex-column">
               <h5 class="custom-card-title">the best financial accounting app ever!</h5>
